Update resume, fix wrapping issue on phone

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
 }
 
 .u-red-text {
-  color: #CC0000;
+  color: #cc0000;
 }
 
 .u-underline-text {
@@ -289,13 +289,17 @@ body {
 
 .contact__list {
   display: flex;
-  flex-wrap: wrap;
   font-size: 1.5rem;
   list-style-type: none;
   padding: 0;
 }
+@media only screen and (orientation: portrait) {
+  .contact__list {
+    justify-content: space-between;
+  }
+}
 .contact__item {
-  padding: 0 4rem;
+  padding: 0 3rem;
   display: inline-block;
 }
 .contact__item:first-of-type {
@@ -314,9 +318,9 @@ body {
     font-size: 2em;
   }
 }
-@media only screen and (max-width: 600px) and (orientation: portrait) {
+@media only screen and (orientation: portrait) {
   .contact__item {
-    padding: 0 3rem 1rem;
+    padding: 0;
   }
   .contact__item span {
     font-size: 1.25em;
@@ -325,7 +329,9 @@ body {
 .contact__link {
   color: black;
   opacity: 0.9;
-  margin: 2rem auto;
+  min-height: 24px;
+  min-width: 24px;
+  display: inline-block;
   text-decoration: none;
 }
 @media only screen and (min-width: 1025px) and (max-width: 1366px) and (orientation: portrait), (min-height: 1025px) and (max-height: 1366px) and (orientation: landscape) {
