--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,14 +1,17 @@
 .contact {
   &__list {
     display: flex;
-    flex-wrap: wrap;
     font-size: 1.5rem;
     list-style-type: none;
     padding: 0;
+
+    @media only screen and (orientation: portrait) {
+      justify-content: space-between;
+    }
   }
 
   &__item {
-    padding: 0 4rem;
+    padding: 0 3rem;
     display: inline-block;
 
     &:first-of-type {
@@ -29,8 +32,8 @@
       }
     }
 
-    @media only screen and (max-width: 600px) and (orientation: portrait) {
-      padding: 0 3rem 1rem;
+    @media only screen and (orientation: portrait) {
+      padding: 0;
       span {
         font-size: 1.25em;
       }
